# cider

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
cider/: anonymizer.py  data_checker.py  datastore.py  featurizer.py  home_location.py  ml.py  satellite.py
deprecated/: datastore.py  fairness.py  featurizer.py  targeting.py
deprecated/helpers/: features.py
helpers/: features.py  features_utils.py  io_utils.py  opt_utils.py  plot_utils.py  utils.py
notebooks/: demo_pipeline.ipynb  featurizer.ipynb  homelocation.ipynb  validation_metrics.ipynb
old_notebooks/: fairness_tests.ipynb  featurizer_tests.ipynb  homelocation_tests.ipynb  ml_tests.ipynb  satellite.ipynb  survey_tests.ipynb  targeting_fairness_togo.ipynb  targeting_tests.ipynb  test.ipynb  test_notebook.ipynb
src/cider/: schemas.py  utils.py
src/cider/featurizer/: core.py  dependencies.py  inference.py  schemas.py
src/cider/homelocation/: core.py  inference.py  plotting.py
src/cider/validation_metrics/: core.py  dependencies.py  plotting.py  schemas.py
synthetic_data/: generate_synthetic_data.ipynb
tests/: conftest.py  test_datastore.py  test_featurizer.py  test_homelocation.py  test_utils.py  test_validation_metrics.py
