[tool.poetry]
name = "cider"
version = "0.1.0"
description = "Poverty prediction and location inference with mobile phone call data records"
authors = ["Emily Aiken, Lucio Melito, Andrew Vaziri"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=2.0.0"
numpy = ">=2.0.0"
mypy = ">=1.0.0"
dask = {extras = ["complete"], version = ">=2024.1.0"}
distributed = ">=2024.1.0"
geopandas = ">=0.14.0"
seaborn = ">=0.12.0"
matplotlib = ">=3.7.0"
rasterio = ">=1.3.0"
Shapely = ">=2.0.0"
lightgbm = ">=4.0.0"
joblib = ">=1.3.0"
python-box = ">=6.0.0"
wpca = ">=0.1"
geovoronoi = ">=0.4.0"
pyquadkey2 = ">=0.2.0"
PyYAML = ">=6.0"
scikit-misc = ">=0.2.0"
scikit-learn = ">=1.4.0"
autoflake = ">=2.0.0"
pandas-stubs = ">=2.0.0"
setuptools = ">=65.0.0"
wheel = ">=0.40.0"
Rtree = ">=1.0.0"
hashids = ">=1.3.1"
importlib-resources = ">=6.0.0"
pyarrow = ">=14.0.0"
fastparquet = ">=2024.1.0"

[tool.poetry.dev-dependencies]
ipykernel = ">=6.25.0"
jupyter = ">=1.0.0"
pytest = ">=7.0.0"
mypy = ">=1.0.0"
isort = ">=5.12.0"
black = ">=23.0.0"
pytest-mock = ">=3.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs=true
disallow_incomplete_defs=true
disallow_untyped_defs=true
install_types=true
no_implicit_optional=true
non_interactive=true
show_column_numbers=true
show_error_codes=true
strict_equality=true
warn_unused_ignores=true
warn_redundant_casts=true
warn_unreachable=true
warn_return_any=false

[tool.pytest.ini_options]
addopts = "--strict-markers"
xfail_strict = true
markers_strict = true
markers = [
  "unit_test",
  "integration_test"
]
